--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body onload="Tabla()">
     <header>
         <div>
-            <h1>Empleado del mes</h1>
+            <h1>Perfumeria DEf.v</h1>
+        </div>
+        <div>
+            <h2>Empleado del mes</h2>
+
         </div>
     </header>
     <div>
@@ -19,23 +23,15 @@
         <img class="imagen1"
             src="https://w7.pngwing.com/pngs/844/244/png-transparent-cartoon-business-women-child-people-public-relations.png"
             alt="" srcset="">
-
     </div>
     <table id="salesTable"></table>
     <div class="botones1">
-
-
-        <button class="btn1"  onclick="Guardarventas()">Guardar ventas</button>
+        <button class="btn1" onclick="Guardarventas()">Guardar ventas</button>
         <button class="btn2" onclick="Borrardatos()">Borrar ventas</button>
     </div>
     <div class="botones2">
         <button class="result" onclick="Resultados()">Resultados del mes</button>
-
     </div>
-
-
     <script src="script.js"></script>
-
 </body>
-
 </html>
