--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="Tabla()">
     <header>
         <div>
-            <h1>Perfumeria DEf.v</h1>
+            <h1>Perfumeria Def.v</h1>
         </div>
         <div>
             <h2>Empleado del mes</h2>
